--- a/community.html
+++ b/community.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a href="forums.html">Forums</a></li>
                     <li class="nav-item"><a href="categories.html">Categories</a></li>
                     <li class="nav-item"><a href="community.html">Community</a></li>
-                    <li class="nav-item hide"><a href="Modctrl.html">Modctrl</a></li>
+                    <li class="nav-item hide"><a href="Modctrl.html">Mod Control</a></li>
                     <li class="nav-item"><a href="login.html">Login</a></li>
                     <li class="nav-item logout-link hide"><a href="#" onclick="logout()">Logout</a></li>
                 </ul>
