--- a/community.html
+++ b/community.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum</title>
+    <title>Forum Community</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -32,34 +33,39 @@
         </div>
     </header>
 
-    <!-- Thread Actions -->
-    <div class="thread-actions">
-        <button class="create-thread-btn" onclick="showNewThreadForm()">Create New Thread</button>
-    </div>
+    <main class="community-container">
+        <!-- Thread Actions -->
+        <div class="thread-actions">
+            <button class="create-thread-btn" onclick="showNewThreadForm()">
+                <i class="fa fa-plus-circle"></i> Create New Thread
+            </button>
+        </div>
 
-    <!-- Create Thread Section (mặc định ẩn) -->
-    <div id="create-thread-section" class="hide">
-        <h2>Create a New Thread</h2>
-        <div class="thread-form">
-            <select id="thread-category" required>
-                <option value="" disabled selected>Select Category</option>
-            </select>
-            <textarea id="thread-title" placeholder="Thread Title" required></textarea>
-            <textarea id="thread-content" placeholder="Write your thread content here..." required></textarea>
-            <div class="thread-buttons">
-                <button onclick="createThread()">Create Thread</button>
-                <button onclick="cancelThreadForm()">Cancel</button>
+        <!-- Create Thread Section (mặc định ẩn) -->
+        <div id="create-thread-section" class="hide">
+            <h2>Create a New Thread</h2>
+            <div class="thread-form">
+                <select id="thread-category" required>
+                    <option value="" disabled selected>Select Category</option>
+                </select>
+                <textarea id="thread-title" placeholder="Thread Title" required></textarea>
+                <textarea id="thread-content" placeholder="Write your thread content here..." required></textarea>
+                <div class="thread-buttons">
+                    <button onclick="createThread()"><i class="fa fa-check"></i> Create Thread</button>
+                    <button onclick="cancelThreadForm()"><i class="fa fa-times"></i> Cancel</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Threads Display Section -->
-    <div class="threads-section">
-        <h2>Recent Threads</h2>
-        <div id="threads-display" class="threads-container">
-            <!-- Threads will be displayed here -->
+        <!-- Threads Display Section -->
+        <div class="threads-section">
+            <h2>Recent Threads</h2>
+            <div id="threads-display" class="threads-container">
+                <!-- Threads will be displayed here -->
+                <div class="loading-shimmer">Loading threads...</div>
+            </div>
         </div>
-    </div>
+    </main>
 
     <footer>
         <span>&copy; 2025 My Forum | All Rights Reserved</span>
