--- a/thread-detail.html
+++ b/thread-detail.html
@@ -50,6 +50,11 @@
                             <span id="thread-date"></span>
                         </div>
                     </div>
+                    <div class="thread-actions">
+                        <button id="delete-thread-btn" class="action-button delete-thread hide" onclick="deleteThread()">
+                            <i class="fa fa-trash"></i> Delete Thread
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Thread Content -->
