--- a/login.html
+++ b/login.html
@@ -58,5 +58,7 @@
     <footer>
         <span>&copy; 2025 My Forum | All Rights Reserved</span>
     </footer>
+    
+    <script src="main.js"></script>
 </body>
 </html> 
