Refactor CKEditor integration and simplify comment form handling
- Removed redundant CKEditor configuration functions and streamlined initialization for post and comment editors.
- Updated comment form to toggle visibility without destroying CKEditor instances.
- Enhanced error handling in API calls for fetching categories and users, reverting to simpler promise-based syntax.
- Improved HTML structure for comment textarea to remove unnecessary IDs.

--- a/thread-detail.html
+++ b/thread-detail.html
@@ -165,7 +165,7 @@
             </div>
             <div class="comment-form hide">
                 <div class="form-content">
-                    <textarea id="comment-editor" class="comment-editor" placeholder="Write a comment..."></textarea>
+                    <textarea placeholder="Write a comment..."></textarea>
                     <button class="button" onclick="submitComment(this)">Add Comment</button>
                 </div>
             </div>
