--- a/community.html
+++ b/community.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="ckeditor-custom.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- CKEditor CDN -->
-    <script src="https://cdn.ckeditor.com/4.16.2/standard-all/ckeditor.js"></script>
-    <script src="ckeditor-config.js"></script>
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -56,8 +52,8 @@
                 <div class="editor-container">
                     <textarea id="thread-content" placeholder="Write your thread content here..." required></textarea>
                     <div class="editor-help">
-                        <p><i class="fa fa-info-circle"></i> Format your content using the editor tools above.</p>
-                        <p><i class="fa fa-lightbulb-o"></i> Tips: Be clear and descriptive in your writing.</p>
+                        <p><i class="fa fa-info-circle"></i> Write your content in a clear and descriptive way.</p>
+                        <p><i class="fa fa-lightbulb-o"></i> Tips: Be respectful and follow community guidelines.</p>
                     </div>
                 </div>
                 <div class="thread-buttons">
