--- a/thread-detail.html
+++ b/thread-detail.html
@@ -41,7 +41,7 @@
                 <div class="thread-header">
                     <div class="thread-nav">
                         <a href="community.html" class="back-button">
-                            <i class="fa fa-arrow-left"></i> Back
+                            <i class="fa fa-arrow-left"></i> Back to Community
                         </a>
                     </div>
                     <div class="thread-category-badge">
