--- a/Modctrl.html
+++ b/Modctrl.html
@@ -110,7 +110,7 @@
         <!-- Report Details Modal -->
         <div id="report-details-modal" class="modal hide">
             <div class="modal-content">
-                <h3>Report Details</h3>
+                <h3>Report Details <span class="report-id"></span></h3>
                 <div class="report-details">
                     <div class="report-location">
                         <p><strong>Location:</strong> <a id="report-thread-link" href="#" target="_blank">View reported content in thread</a></p>
@@ -123,12 +123,20 @@
                         <p><strong>Reported by:</strong> <span id="report-author"></span></p>
                         <p><strong>Reason:</strong> <span id="report-reason-display"></span></p>
                         <p><strong>Date:</strong> <span id="report-date"></span></p>
+                        <p><strong>Status:</strong> <span id="report-status" class="report-status-badge"></span></p>
+                    </div>
+                    <div class="report-actions-history">
+                        <h4>Actions History</h4>
+                        <div id="report-history-list" class="report-history-list">
+                            <div class="no-history">No previous actions recorded</div>
+                        </div>
                     </div>
                 </div>
-                <div class="modal-buttons">
-                    <button onclick="resolveReport()" class="resolve-btn">Mark as Resolved</button>
-                    <button onclick="rejectReport()" class="reject-btn">Reject Report</button>
-                    <button onclick="closeReportDetailsModal()" class="close-btn">Close</button>
+                <div class="modal-buttons report-modal-actions">
+                    <button onclick="resolveReport()" class="resolve-btn pending-only"><i class="fa fa-check"></i> Mark as Resolved</button>
+                    <button onclick="rejectReport()" class="reject-btn pending-only"><i class="fa fa-times"></i> Reject Report</button>
+                    <button onclick="deleteReportedContent()" class="delete-content-btn pending-only"><i class="fa fa-trash"></i> Delete Content</button>
+                    <button onclick="closeReportDetailsModal()" class="close-btn"><i class="fa fa-close"></i> Close</button>
                 </div>
             </div>
         </div>
