--- a/thread-detail.html
+++ b/thread-detail.html
@@ -163,14 +163,12 @@
                     </div>
                 </div>
                 <div class="comment-actions">
-                    <button class="action-button edit-comment ">
+                    <button class="action-button edit-comment hide">
                         <i class="fa fa-edit"></i>
                     </button>
-                    <button class="action-button delete-comment " onclick="deleteComment(this.closest('.comment').getAttribute('data-comment-id'))">
+                    <button class="action-button delete-comment hide">
                         <i class="fa fa-trash"></i>
                     </button>
-                
-        
                 </div>
             </div>
             <div class="comment-content"></div>
